# git_progress_sync

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  pretty_format_system_time.rs
