[package]
name = "git_progress_sync"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
directories = "6.0.0"
git2 = "0.20.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.4"
whoami = "2.1.1"
inquire = "0.9.4"
chrono = { version = "0.4.44", features = ["unstable-locales"] }
sys-locale = "0.3.2"
